--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="w-full h-full relative flex flex-col">
+      
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
