--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="grad">
-    <div id="root" class="w-full h-full relative flex flex-col">
+    <div id="root" class="w-full max-w-96 h-full relative flex flex-col">
       
     </div>
     <script type="module" src="/src/main.jsx"></script>
